Adjust json path for the single result set

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,14 +27,10 @@ before_script:
 script:
   # Build the current state into a docker image.
   - ./containers/build
-  # Print all images from docker
-  - docker images -a
   # Deploy multiple duplicated of this container onto minikube.
   - ./containers/kube/deploy
-  # Print all information of the cluster
-  - kubectl get all
   # Wait for deployed application to be ready.
-  - JSONPATH='{range .items[*]}{@.metadata.name}:{@.status.availableReplicas};{end}'; until kubectl get all && kubectl logs -l app=sip && kubectl get deployments sip -o jsonpath="$JSONPATH" 2>&1 | grep -q "sip:10"; do sleep 1; done
+  - JSONPATH='{.metadata.name}:{.status.availableReplicas}'; until kubectl get deployments sip -o jsonpath="$JSONPATH" && kubectl get deployments sip -o jsonpath="$JSONPATH" 2>&1 | grep -q "sip:10"; do sleep 1; done
   # Fetch the service port
   - SIP_PORT="$(kubectl get deployments sip -o jsonpath='{.spec.ports[0].nodePort}' 2>&1)"
   - echo "${SIP_PORT}"
