--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ script:
   # Deploy multiple duplicated of this container onto minikube.
   - ./containers/kube/deploy
   # Wait for deployed application to be ready.
-  - JSONPATH='{.metadata.name}:{.status.availableReplicas}'; until kubectl get deployments sip -o jsonpath="$JSONPATH" && kubectl get deployments sip -o jsonpath="$JSONPATH" 2>&1 | grep -q "sip:10"; do sleep 1; done
+  - JSONPATH='{.metadata.name}:{.status.availableReplicas}'; until kubectl get deployments sip -o jsonpath="$JSONPATH" 2>&1 | grep -q "sip:10"; do sleep 1; done
   # Fetch the service port
   - SIP_PORT="$(kubectl get deployments sip -o jsonpath='{.spec.ports[0].nodePort}' 2>&1)"
   - echo "${SIP_PORT}"
