Wrap error handeling for ci script errors

--- a/containers/build
+++ b/containers/build
@@ -1,2 +1,2 @@
 #!/bin/bash
-docker build -t sip:test . || printf "Failed to build docker container -t sip:test"
+docker build -t sip:test . || (printf "Failed to build docker container -t sip:test" && exit 1)
