--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,10 @@
       "type": "go",
       "request": "launch",
       "mode": "debug",
-      "program": "${workspaceRoot}"
+      "program": "${workspaceRoot}",
+      "env": {
+        "PORT": "31670"
+      }
     }
   ]
 }
