Attempt to largely refactor travis build with stages and multi os

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,10 @@ sudo: required
 
 language: go
 
+stages:
+  - unit
+  - integration
+
 os:
   - linux
   - osx
@@ -10,23 +14,34 @@ os:
 services:
   - docker
 
-env:
-  global:
-    # Specifies the kubernetes version.
-    - KUBERNETES_VERSION=v1.10.0
-    # This moves Kubernetes specific config files.
-    - CHANGE_MINIKUBE_NONE_USER=true
+jobs:
+  include:
+    - stage: unit
+      os:
+        - linux
+        - osx
+        - windows
+      script:
+        # Run simple go tests
+        - go test ./core/... -v -cover
 
-before_script:
-  # Setup minikube for ci enviroment.
-  - ./containers/ci/minikube
-
-script:
-  # Deploy multiple duplicated of this container onto minikube.
-  - ./containers/kube/deploy
-  # Setup local certificate for testing
-  - ./crt/make
-  # Run all test interacting with the cluster
-  - ./containers/ci/test
-  # Clean everything from the minikube.
-  - ./containers/kube/clean
+    - stage: integration
+      os: linux
+      env:
+        global:
+          # Specifies the kubernetes version.
+          - KUBERNETES_VERSION=v1.10.0
+          # This moves Kubernetes specific config files.
+          - CHANGE_MINIKUBE_NONE_USER=true
+      before_script:
+        # Setup minikube for ci enviroment.
+        - ./containers/ci/minikube
+      script:
+        # Deploy multiple duplicated of this container onto minikube.
+        - ./containers/kube/deploy
+        # Setup local certificate for testing
+        - ./crt/make
+        # Run all test interacting with the cluster
+        - ./containers/ci/test
+        # Clean everything from the minikube.
+        - ./containers/kube/clean
