Attempt to fix go not being able to find the correct file

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ jobs:
         # Run simple go tests
         - go test -v -cover -coverprofile "${TRAVIS_OS_NAME}.out" ./core/...
         # Upload coverage results
-        - go run ./test
+        - go run ./test/gdrive.go
     - <<: *unit-setup
       os: osx
       before_script:
