--- a/.travis.yml
+++ b/.travis.yml
@@ -39,8 +39,8 @@ jobs:
       before_script:
         # OSX comes with a user limit for number of open files
         - ulimit -n 10000
-    - <<: *unit-setup
-      os: windows
+#    - <<: *unit-setup
+#      os: windows
 
     - stage: integration
       <<: *coveralls
