--- a/.travis.yml
+++ b/.travis.yml
@@ -45,6 +45,28 @@ jobs:
 
     - stage: integration
       env:
+        # Set the Go os variable to javascript.
+        - GOOS=js
+        # Set the go architecture to wasm.
+        - GOARCH=wasm
+        # Set the wasm nodejs executor to path.
+        - PATH="$PATH:$(go env GOROOT)/misc/wasm"
+      before_script:
+        # Setup minikube for ci enviroment.
+        - ./containers/ci/minikube
+      script:
+        # Deploy multiple duplicated of this container onto minikube.
+        - ./containers/kube/deploy
+        # Setup local certificate for testing
+        - ./crt/make
+        # Run all test interacting with the cluster
+        - ./containers/ci/test
+        # Clean everything from the minikube.
+        - ./containers/kube/clean
+        - *coveralls
+        - *codecov
+    - stage: integration
+      env:
         # Specifies the kubernetes version.
         - KUBERNETES_VERSION=v1.10.0
         # This moves Kubernetes specific config files.
